--- a/scam-check.html
+++ b/scam-check.html
@@ -40,7 +40,20 @@
           </div>
           
           <div class="recent-checks-section mt-5">
-              <a href="resources-bulletin.html" class="resources-hub-link mb-4 d-flex align-items-center justify-content-between gap-3" aria-label="Фишинг домейни и зловредни ресурси"><span class="d-flex align-items-center gap-2"><i class="bi bi-shield-exclamation"></i><span>Фишинг домейни / Зловредни ресурси</span></span><span class="resources-hub-link-arrow"><i class="bi bi-arrow-right"></i></span></a>
+              <a href="resources-bulletin.html" class="resources-hub-link mb-4" aria-label="Отвори публичния списък с фишинг домейни и зловредни ресурси">
+                <span class="resources-hub-link-icon" aria-hidden="true">
+                  <i class="bi bi-shield-exclamation"></i>
+                </span>
+                <span class="resources-hub-link-content">
+                  <span class="resources-hub-link-eyebrow">Публичен регистър</span>
+                  <span class="resources-hub-link-title">Фишинг домеини и зловредни ресърси</span>
+                  <span class="resources-hub-link-description">Известни рискови домеини и зловредни ресурси</span>
+                </span>
+                <span class="resources-hub-link-cta">
+                  <span class="resources-hub-link-cta-text">Отвори</span>
+                  <span class="resources-hub-link-arrow" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
+                </span>
+              </a>
               <h4 class="mb-4 recent-checks-title"><i class="bi bi-clock-history me-2"></i>Последни проверки</h4>
                <div id="recent-checks-list" class="recent-checks-list">
                   <div class="recent-check-item">
