enhance resources bulletin and scam check pages with breadcrumb navigation and UI improvements

--- a/resources-bulletin.html
+++ b/resources-bulletin.html
@@ -15,10 +15,17 @@
   <header id="app-header"></header>
 
   <main class="container py-4">
+    <nav class="rb-breadcrumb mb-4" aria-label="breadcrumb">
+      <ol class="breadcrumb mb-0">
+        <li class="breadcrumb-item"><a href="scam-check.html">Провери</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Публичен регистър</li>
+      </ol>
+    </nav>
+
     <section class="rb-hero mb-4">
       <div class="rb-hero-inner">
-        <h1 class="rb-title">Фишинг домейни / Зловредни ресурси</h1>
-        <p class="rb-subtitle mb-0">Публичен списък за бърза справка по известни фишинг домейни и зловредни ресурси.</p>
+        <h1 class="rb-title">Фишинг домейни и зловредни ресурси</h1>
+        <p class="rb-subtitle mb-0">Известни рискови домеини и ресурси</p>
       </div>
     </section>
 
