--- a/scam-check.html
+++ b/scam-check.html
@@ -46,8 +46,8 @@
                 </span>
                 <span class="resources-hub-link-content">
                   <span class="resources-hub-link-eyebrow">Публичен регистър</span>
-                  <span class="resources-hub-link-title">Фишинг домеини и зловредни ресърси</span>
-                  <span class="resources-hub-link-description">Известни рискови домеини и зловредни ресурси</span>
+                  <span class="resources-hub-link-title">Фишинг домейни и зловредни ресурси</span>
+                  <span class="resources-hub-link-description">Известни рискови домеини и ресурси</span>
                 </span>
                 <span class="resources-hub-link-cta">
                   <span class="resources-hub-link-cta-text">Отвори</span>
